--- a/WPFDemo/App.xaml
+++ b/WPFDemo/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:WPFDemo"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="AquaColorChema.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
