--- a/WPFDemo/UserLogin.xaml
+++ b/WPFDemo/UserLogin.xaml
@@ -6,15 +6,26 @@
         xmlns:local="clr-namespace:WPFDemo"
         mc:Ignorable="d"
         Title="UserLogin" Height="450" Width="800" x:Name="loginWindow">
+    <Window.Resources>
+        <Style x:Key="userHint" TargetType="TextBlock">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=userTB,Path=IsFocused}" Value="false" >
+                    <Setter Property="Visibility" Value="Collapsed"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Width="100">Rolev Name</Label>
             <TextBox Text="{Binding  Path=UserName}" Width="200" IsEnabled="{Binding ElementName=loginWindow,Path=RememberMe}"/> 
         </StackPanel>
+        <TextBlock Margin="100,0,0,0" Style="{StaticResource userHint}">Для введення імені користувача використовувати тільки англійські букви</TextBlock>
         <StackPanel Orientation="Horizontal">
             <Label Width="100">User Name</Label>
-            <TextBox Text="{Binding Path=UserName}" Width="200"/>
+            <TextBox Text="{Binding Path=UserName}" Width="200" x:Name="userTB"/>
         </StackPanel>
+        <TextBlock Margin="100,0,0,0" >Пароль ма містити великі і малі літери та цифри і бути не коротше 8 символів</TextBlock>
         <StackPanel Orientation="Horizontal">
             <Label Width="100">Password</Label>
             <TextBox Text="{Binding Path=Password}" Width="200"/>
