--- a/WPFDemo/App.xaml
+++ b/WPFDemo/App.xaml
@@ -6,8 +6,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="AquaColorChema.xaml"/>
+                <ResourceDictionary Source="RoundedButton.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
+ 
     </Application.Resources>
 </Application>
