--- a/WPFDemo/MainWindow.xaml
+++ b/WPFDemo/MainWindow.xaml
@@ -10,8 +10,16 @@
         Height="200" Width="400"
         Background="AliceBlue">
     <Window.Resources>
-        
+        <ControlTemplate x:Key="roundedButton" TargetType="Button">
+            <Border x:Name="border" CornerRadius="2" BorderThickness="2" BorderBrush="Black" >
+                <Border x:Name="border2" BorderThickness="2" BorderBrush="Yellow" CornerRadius="2">
+                    <ContentPresenter ContentSource="Content"></ContentPresenter>
+                </Border>
+            </Border>
+        </ControlTemplate>
+
         <Style x:Key="myButton" TargetType="Button">
+            <Setter Property="Template" Value="{StaticResource roundedButton}"/>
             <Setter Property="ItemsControl.Background" Value="LightCyan"/>
             <Setter Property="ItemsControl.Foreground" Value="Black"/>
             <Setter Property="ItemsControl.FontSize" Value="6"/>
@@ -31,12 +39,9 @@
                 <DataTrigger Binding="{Binding ElementName=myButt,Path=IsMouseOver}" Value="true">
                     <Setter Property="Background" Value="Chocolate"/>
                 </DataTrigger>
-                <MultiDataTrigger>
-                    <
-                </MultiDataTrigger>
-            </Style.Triggers>
+             </Style.Triggers>
         </Style>
-        <Style TargetType="Button">
+        <Style TargetType="Button" x:Key="testBT">
             <Setter Property="Background" Value="Wheat"/>
             <Setter Property="Foreground" Value="Brown"/>
             <Setter Property="FontSize" Value="16"/>
@@ -49,17 +54,27 @@
         <!--<Button DockPanel.Dock="Top" Height="50">Top</Button>-->
         <!--<Button DockPanel.Dock="Bottom" Height="50">Buttom</Button>-->
         <Button   Click="Button_Click_1" Style="{StaticResource myButton}">user login</Button>
-        <Button   Click="Button_Click_1">Test 2</Button>
-        <Border BorderThickness="2"
-                CornerRadius="2"
-                Padding="1"
-                BorderBrush="{Binding ElementName=myButt,Path=BorderBrush,Mode=OneWay}"
-                Background = "{Binding ElementName=myButt,Path=Background,Mode=OneWay}">
-            <Button  x:Name="myButt" Click="Button_Click_2" BorderThickness="0">Change Color</Button>
-        </Border>
+        <Button   Click="Button_Click_1" Template="{StaticResource RoundedButtonTemplate}" BorderThickness="2" Background="Yellow" BorderBrush="Red">Test 2</Button>
+        <Button  x:Name="myButt" Click="Button_Click_2" BorderThickness="6" Background="Azure" >Change Color</Button>
        
         <!--<Button DockPanel.Dock="Right" Width="50">Right</Button>-->
-   
-
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+            <TextBox />
+            <Button Grid.Column="1" Width="20">...</Button>
+        </Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+            <TextBox  x:Name="demoTB" Text=""/>
+            <Button Grid.Column="1" Width="20">...</Button>
+        </Grid>
+        <local:TextBoxWithButton  Text="{Binding ElementName=demoTB,Path=Text,Mode=TwoWay}"></local:TextBoxWithButton>    
+    
     </StackPanel>
 </Window>
