--- a/WpfChess/MainWindow.xaml
+++ b/WpfChess/MainWindow.xaml
@@ -5,13 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfChess"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Window.Resources>
         <Style x:Key="BlackCell" TargetType="local:FigureCell">
             <Setter Property="Background" Value="Gray"/>
+            <Style.Triggers>
+                <Trigger Property="IsMarkFigure" Value="True">
+                    <Setter Property="Background" Value="Green"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
         <Style x:Key="WhiteCell" TargetType="local:FigureCell">
             <Setter Property="Background" Value="AliceBlue"/>
+            <Style.Triggers>
+                <Trigger Property="IsMarkFigure" Value="True">
+                    <Setter Property="Background" Value="Green"/>
+                </Trigger>
+            </Style.Triggers>
+
         </Style>
 
     </Window.Resources>
@@ -20,7 +31,7 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Grid>
+        <Grid x:Name="chessDesk">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition />
